# autostereogram

./: .gitignore  README.md
autostereogram_generator/: README.md  pyproject.toml
autostereogram_generator/src/autostereogram_generator/: __init__.py  __main__.py  cli.py  depth_estimator.py  stereogram.py  utils.py
autostereogram_generator/tests/: test_integration.py
